syntax = "proto3";

package person;
option go_package = "memcache/pkg/proto/person";

service PersonService{
  rpc SetPerson(SetPersonRequest) returns (SetPersonResponse) {};
  rpc GetPerson(GetPersonRequest) returns (GetPersonResponse) {};
  rpc DeletePerson(DeletePersonRequest) returns (DeletePersonResponse) {};
}

message Person {
  string name = 1;
  int32  age  = 2;
}

message SetPersonRequest {
  Person person = 1;
  int64  ttl    = 2;
}

message SetPersonResponse {
  string id = 1;
}

message GetPersonRequest {
  string id = 1;
}

message GetPersonResponse {
  Person person = 1;
}

message DeletePersonRequest {
  string id = 1;
}

message DeletePersonResponse {
}
